# biglinux-systemd-swap

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  post-install.sh  prepare-update.sh  pyproject.toml
include/: 91-memory.conf  99-systemd-swap.conf  better-lattency.conf  pre-systemd-swap.service  swap-default.conf  systemd-swap.service
man/: swap.conf.5
pkgbuild/: PKGBUILD  pkgbuild.install
pkgbuild/pkg/systemd-swap/: .BUILDINFO  .MTREE  .PKGINFO
pkgbuild/systemd-swap/: config  packed-refs
pkgbuild/systemd-swap/objects/pack/: pack-f0add19f9514133089e7fe0914a7704d53e89aa2.idx  pack-f0add19f9514133089e7fe0914a7704d53e89aa2.pack
src/: auto-hugepages  autoconfig.rs  config.rs  defaults.rs  helpers.rs  lib.rs  main.rs  meminfo.rs  pre-systemd-swap  swapfc.rs  swapfile.rs  systemd-swap.py  systemd-swap.py-custom  systemd.rs  zram.rs  zswap.rs
tests/: __init__.py  test_config.py  test_helpers.py  test_swapfc.py  test_zram_zswap.py
