[package]
name = "systemd-swap"
version = "0.2.0"
edition = "2021"
authors = ["Timofey Titovets", "BigLinux Team"]
description = "Dynamic swap management for zram, zswap, and swap files"
license = "GPL-3.0-or-later"
repository = "https://github.com/biglinux/biglinux-systemd-swap"

[dependencies]
clap = { version = "4", features = ["derive"] }
nix = { version = "0.29", features = ["fs", "process", "signal", "user", "feature"] }
libsystemd = "0.7"
glob = "0.3"
libc = "0.2"
signal-hook = "0.3"
thiserror = "2"
pathdiff = "0.2"
ctrlc = "3"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1
